--- a/stopwatch-app/package.json
+++ b/stopwatch-app/package.json
@@ -35,5 +35,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.86.3",
+    "sass-loader": "^16.0.5"
   }
 }
